--- a/app/globals.css
+++ b/app/globals.css
@@ -6,12 +6,8 @@ body {
   font-family: var(--font-funnel-display);
 }
 
-#circle-mask{
-  transform-origin: center;
-  transform: rotate(225deg);
-}
 
-@layer components {
+@layer utilities {
   .center-layout {
     @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
   }
